# OperationalResearchAPI

./: .gitignore  CMakeLists.txt  Makefile  README.md  client.py  hcfi  server.cpp  server_async.cpp
algo/: Makefile  functions.c  main.c  testCommunicate.py
algo/source/: functions.c  functions.h  main.c
dockerfile/: Dockerfile  apt_requirements.txt
grpcCallData/: CallData.cpp  CallData.h  HCInitTransaction.cpp  HCInitTransaction.h
grpcCallData/HillClimberFI/: HCBase.cpp  HCBase.h  HCFitnessTransaction.cpp  HCFitnessTransaction.h  HCInitTransaction.cpp  HCInitTransaction.h  HCStopTransaction.cpp  HCStopTransaction.h
grpcCallData/TabuSearch/: TSBase.cpp  TSBase.h  TSFitnessTransaction.cpp  TSFitnessTransaction.h  TSInitTransaction.cpp  TSInitTransaction.h  TSStopTransaction.cpp  TSStopTransaction.h
grpcServices/: HelloWorld.cpp  HelloWorld.h  HillClimberFirstImprovement.cpp  HillClimberFirstImprovement.h
libs/: helper.cpp  helper.h  tabousearch.cpp  tabousearch.h
protoClassClient/: api_pb2.py  api_pb2_grpc.py  hcfi_pb2.py  hcfi_pb2_grpc.py
protoClassServer/: api.grpc.pb.cc  api.grpc.pb.h  api.pb.cc  api.pb.h  hcfi.grpc.pb.cc  hcfi.grpc.pb.h  hcfi.pb.cc  hcfi.pb.h
protos/: api.proto  hcfi.proto  helloworld.proto  messages.proto  tabousearch.proto
